crates/swc_ecma_parser/tests/test262-error-references/fail/7615ff9f43ea0dde.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/7615ff9f43ea0dde.js:1:7
  |
1 | class default
  |       ^^^^^^^

